Fixed small-screens overflows, unaccessability & unusability

--- a/styles/root.css
+++ b/styles/root.css
@@ -42,6 +42,7 @@ body > div {
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    overflow: hidden;
 }
 
 nav {
@@ -52,6 +53,7 @@ nav {
     flex-direction: column;
     align-items: stretch;
     border-right: 1px solid var(--header-highlight);
+    overflow: hidden;
 }
 
 main {
@@ -63,6 +65,7 @@ header {
     background-color: var(--header);
     width: calc(100% - 1rem); /* Substract padding */
     height: var(--header-size);
+    min-height: var(--header-size);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -71,6 +74,7 @@ header {
     color: var(--text);
     padding: 0 0.5rem;
     border-bottom: 1px solid var(--header-highlight);
+    overflow: hidden;
 }
 
 header > div {
@@ -105,7 +109,7 @@ footer {
 
 footer > div {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 1rem);
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -121,10 +125,17 @@ main > footer {
     overflow-y: auto;
 }
 
+main > footer::after {
+    content: '';
+    display: block;
+    height: 1rem;
+}
+
 hr {
     outline: none;
     border: none;
     height: 1px;
+    min-height: 1px;
     width: 100%;
     background-color: var(--header-highlight);
 }
@@ -133,7 +144,7 @@ hr {
     :root {
         --nav-size: 100vw;
     }
-    
+
     body > div {
         scroll-snap-type: x mandatory;
         overflow-x: scroll;
@@ -143,5 +154,11 @@ hr {
     nav {
         min-width: 100vw;
         scroll-snap-align: start;
+    }
+}
+
+@media only screen and (max-width: 32rem) {
+    main header > div a span {
+        display: none;
     }
 }
